docs: fix title colour on dark mode

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -19,6 +19,10 @@
  * and scoped locally.
  */
 
+.textWhite {
+  color: var(--ifm-color-white);
+}
+
 .heroBanner {
   padding: 4rem 0;
   text-align: center;
